---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _0",
    "private parameters indices : []",
    "public parameters indices : []",
    "return value indices : []",
    "BRILLIG CALL func 0: inputs: [], outputs: []",
    "unconstrained func 0",
    "[Const { destination: Direct(2), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(1), bit_size: Integer(U32), value: 32836 }, Const { destination: Direct(0), bit_size: Integer(U32), value: 3 }, Const { destination: Relative(1), bit_size: Integer(U32), value: 0 }, Const { destination: Relative(2), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(32836), size_address: Relative(1), offset_address: Relative(2) }, Call { location: 11 }, Call { location: 12 }, Const { destination: Relative(1), bit_size: Integer(U32), value: 32836 }, Const { destination: Relative(2), bit_size: Integer(U32), value: 0 }, Stop { return_data: HeapVector { pointer: Relative(1), size: Relative(2) } }, Return, Call { location: 40 }, Mov { destination: Relative(1), source: Direct(1) }, BinaryIntOp { destination: Direct(1), op: Add, bit_size: U32, lhs: Direct(1), rhs: Direct(2) }, Const { destination: Relative(2), bit_size: Field, value: 0 }, Store { destination_pointer: Relative(1), source: Relative(2) }, Const { destination: Relative(3), bit_size: Field, value: 6 }, Const { destination: Relative(4), bit_size: Field, value: 1 }, Const { destination: Relative(5), bit_size: Field, value: 7 }, Jump { location: 21 }, Load { destination: Relative(6), source_pointer: Relative(1) }, BinaryFieldOp { destination: Relative(7), op: Equals, lhs: Relative(6), rhs: Relative(3) }, JumpIf { condition: Relative(7), location: 39 }, Jump { location: 25 }, BinaryFieldOp { destination: Relative(7), op: Add, lhs: Relative(6), rhs: Relative(4) }, Store { destination_pointer: Relative(1), source: Relative(7) }, Mov { destination: Relative(6), source: Direct(1) }, BinaryIntOp { destination: Direct(1), op: Add, bit_size: U32, lhs: Direct(1), rhs: Direct(2) }, Store { destination_pointer: Relative(6), source: Relative(2) }, Jump { location: 31 }, Load { destination: Relative(7), source_pointer: Relative(6) }, BinaryFieldOp { destination: Relative(8), op: Equals, lhs: Relative(7), rhs: Relative(5) }, JumpIf { condition: Relative(8), location: 38 }, Jump { location: 35 }, BinaryFieldOp { destination: Relative(8), op: Add, lhs: Relative(7), rhs: Relative(4) }, Store { destination_pointer: Relative(6), source: Relative(8) }, Jump { location: 31 }, Jump { location: 21 }, Return, Const { destination: Direct(32772), bit_size: Integer(U32), value: 30720 }, BinaryIntOp { destination: Direct(32771), op: LessThan, bit_size: U32, lhs: Direct(0), rhs: Direct(32772) }, JumpIf { condition: Direct(32771), location: 45 }, IndirectConst { destination_pointer: Direct(1), bit_size: Integer(U64), value: 17843811134343075018 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Direct(2) } }, Return]"
  ],
  "debug_symbols": "nZJLjoQgEEDvwpoFfz9X6XQMKnZICBpaJ5kY7z6F4LQueuOGBxSvCkitqDft8mqsH8Y3qh8raoN1zr4aN3Z6tqOH3RWROFCOaoYRFQkyQe1gNIGhmgMgJgAqoUC1BJQJ1Q5OE0BQABAKAAjFtmF0FG/mYEysfboN3HHSwfgZ1X5xDqMf7Zb90HvSfuesA0QJRsb3QEg4WGfibMMfm3xXKSmzTCX71+XVp999xmT2GVN3fFkdvqpu+FzQ7HNJbviCFNkXpLzjq+P9opA3fFny7Mvq+v9PWOnOhkt/bjFTsLp1Ji+HxXen6Pw7HZGjv6cwdqZfgomZTk0O40MQLORzi9X+AA==",
  "file_map": {
    "50": {
      "source": "// Regression for issue #8319 (https://github.com/noir-lang/noir/issues/8319)\nunconstrained fn main() {\n    func_4(([982714762, 1608230664, 671108204]))\n}\n\nunconstrained fn func_4(a: [u32; 3]) {\n    {\n        let mut idx_b = 0;\n        loop {\n            if (idx_b == 6) {\n                break\n            } else {\n                idx_b = (idx_b + 1);\n                {\n                    let mut idx_c = 0;\n                    loop {\n                        if (idx_c == 7) {\n                            break\n                        } else {\n                            idx_c = (idx_c + 1);\n                            for idx_d in ((a[2] / 1193346642) % 4)..(a[1] % 4) {\n                                {\n                                    let mut idx_g = 0;\n                                    loop {\n                                        if (idx_g == 3) {\n                                            break\n                                        } else {\n                                            idx_g = (idx_g + 1);\n                                            let h = (a[0] % idx_d);\n                                            println(h);\n                                        }\n                                    }\n                                };\n                                break;\n                            }\n                        }\n                    }\n                };\n            }\n        }\n    }\n}\n",
      "path": ""
    }
  },
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
